Fixed Kingdoms break on reload