@@ -10,6 +10,7 @@ import com.rosekingdom.rosekingdom.Tab.Statements.KingdomStatement;
 import com.rosekingdom.rosekingdom.Tab.Tab;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
+import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.Player;
 import org.bukkit.scoreboard.Team;
@@ -25,7 +26,7 @@ public class Kingdom extends Tab {
     UUID owner;
     Team separatorTeam;
     NPC separator;
-    List<Player> members = new ArrayList<>();
+    List<UUID> members = new ArrayList<>();
     List<Team> ranks = new ArrayList<>();
     List<Player> inChat = new ArrayList<>();
     List<String> invites = new ArrayList<>();
@@ -51,24 +52,20 @@ public class Kingdom extends Tab {
         this.name = name;
     }
 
-    public void hideSeparator() {
-        separator.despawn();
-    }
-
-    public void showSeparator() {
-        separator.addToTabOnly();
-    }
-
-    public List<Player> getMembers(){
+    public List<UUID> getMembers(){
         return members;
     }
 
-    public void addMember(Player player){
+    public void addMember(OfflinePlayer player){
+        members.add(player.getUniqueId());
+    }
+
+    public void addMember(UUID player){
         members.add(player);
     }
 
-    public void removeMember(Player player){
-        members.remove(player);
+    public void removeMember(OfflinePlayer player){
+        members.remove(player.getUniqueId());
     }
 
     public String createInvite(){
@@ -119,6 +116,7 @@ public class Kingdom extends Tab {
         this.separator = new NPC(name,
                 "ewogICJ0aW1lc3RhbXAiIDogMTcxMjM0MzcwNjEyMywKICAicHJvZmlsZUlkIiA6ICI1ZTdmY2RjYTU5YzI0NjkwODAwNjg4OTNkODU1ODM3NCIsCiAgInByb2ZpbGVOYW1lIiA6ICJKYWVsbGFyaSIsCiAgInNpZ25hdHVyZVJlcXVpcmVkIiA6IHRydWUsCiAgInRleHR1cmVzIiA6IHsKICAgICJTS0lOIiA6IHsKICAgICAgInVybCIgOiAiaHR0cDovL3RleHR1cmVzLm1pbmVjcmFmdC5uZXQvdGV4dHVyZS81ZWFkZjcxZDhkZDdjNGNiN2NlMzJhY2E1NGRiODE2YTkwNTA5YjQzMjIzMmNkODhkM2FlM2VlYWY4YzhmZTc2IgogICAgfQogIH0KfQ==",
                 "KMgAXxUwHyVt5VlXzLcjUSR14CcKXvMvSImOaGXjHvtuN7VaH62pr6YfBVPLQ/J120ULc4vUP5flVJQYiFtWBv0+QGdDCDZQjEPr/UPzG5W08GEWv3HMIaRgAH9bb90aDzyGaxcGtDpz/gb5ZpycKtXLUtLS4zHIiVq2VKW3eaJN87+HnecjP2DtY+PaicPOd5O9XObKB3mBCUXmxQcjyoLR7aMIZUc0NyJTNHwcKRJ8td+rdhC/xtvnzI9ZbbQuniDaTYw1HMVzc3SKvIhJeaz0FTJ99AGQoU2FE+/thq09bli4ha6ML+tNR/QQ5YLqxlOHYmfVz0LaXnlvbZGfoiExdQFPXH/e6vx3QkC3MNmMqYty8GwF3+1N3AJXREvNQ/WbPXs/Wo+cv/8Irbwh0hl+sj1sHEj3kNSNjSEBrXXfE1zWnQhMzUNan+QTZXDJOIrXAoukVq2oSXi2XRMli10fuwgCNRDZHB5d/dxNw/4XHn96wgH6TVmZpcoQbwj7vnNIqtdesC+HJALRrkoR4sZW376/NgGNhCiMN4KvIUurPv44FY2Vz+kVpeX6J6CraDz8+Zy5MXrXwi5Vcy9a1EHDCgxOtxGZu04aKDflZnUA871baHda34/TdrqJ/QevviWQI/fi+r4xA6D0bCS9RCahtzBAUwJUa5PKqETfLkw=");
+        this.separator.shown(false);
         createRanks();
         KingdomHandler.addKingdom(this);
     }
@@ -127,15 +125,13 @@ public class Kingdom extends Tab {
         separatorTeam = getBoard().registerNewTeam("1" + kingdomNumber + "00" + name);
         separatorTeam.prefix(Component.text("\uDB00\uDC02"));
         separatorTeam.color(NamedTextColor.GRAY);
-        if(!separator.isOnTabList()) {
-            separator.addToTabOnly();
-        }
+        separator.addToTabOnly();
         separatorTeam.addEntity(separator.getNPC().getBukkitEntity());
     }
 
     public void deleteSeparator(){
         separatorTeam.unregister();
-        hideSeparator();
+        separator.despawn();
     }
 
     public void createRanks(){
@@ -163,8 +159,8 @@ public class Kingdom extends Tab {
                 RankHandler.setPlayerRank(player, rank);
             }
         }
-        for(Player member : getMembers()){
-            if(member.getName().equals(player.getName())){
+        for(UUID member : getMembers()){
+            if(member.equals(player.getUniqueId())){
                 return;
             }
         }
@@ -188,15 +184,16 @@ public class Kingdom extends Tab {
             return;
         }
         if(owner.equals(player.getUniqueId())){
-            owner = getMembers().get(0).getUniqueId();
+            owner = getMembers().getFirst();
         }
     }
 
     public List<Player> getOnlinePlayers(){
         List<Player> online = new ArrayList<>();
-        for(Player player : getMembers()){
-            if(player.isOnline()){
-                online.add(player);
+        for(UUID player : getMembers()){
+            Player p = Bukkit.getPlayer(player);
+            if(p != null){
+                online.add(p);
             }
         }
         return online;
@@ -223,5 +220,8 @@ public class Kingdom extends Tab {
     public void save(){
         KingdomStatement.insertKingdom(this);
         KingdomStatement.insertMembers(this);
+        deleteSeparator();
+        deleteRanks();
+        deleteKingdom();
     }
 }
